# firmware-st-b-l475e-iot01a

./: .gitignore  .mbedignore  Doxyfile  Makefile  README.md  build_flags.txt  gen_call_graph.sh  linux_build_debug.sh  pyproject.toml  vimrc_local
docs/call_graph/dot/: common.c0.dot  ei_classifier_porting_mbed_signal.cpp0.dot  ei_microphone_inference.cpp0.dot  ei_run_classifier_c.cpp0.dot  flatbuffer_conversions.cc0.dot  main.cpp0.dot  trained_model_compiled.cpp0.dot
duyanhy4nscripts/: .gdbinit  Y4N_SCRIPT_Debug_Server.py  app-debug  app-debug_template  app.gdb  app.gdb_template  build_loramacnode.sh  build_mbed.py  cpp-debug  cpp.gdb  debug  genImg.py  lora_openocd.gdb  loramacnode-debug  mbed-debug  mbed.gdb  stm-debug  stm.gdb
notes/: 202104191451 Training MFCC input.md
source/: main.cpp
source/model-parameters/: dsp_blocks.h  model_metadata.h
source/repl/: at_cmd_interface.h  at_cmds.h  repl.h
source/sensors/: ei_microphone.h
source/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
trained-model-sdk/: README.md
trained-model-sdk/SCIv4-6-0/: keras_metadata.pb  saved_model.pb
trained-model-sdk/SCIv4-6-0/variables/: variables.data-00000-of-00001  variables.index
