[tool.poetry]
name = "firmware-st-b-l475e-iot01a"
version = "0.1.0"
description = "edge impulse firmware"
authors = ["duyanh-y4n <duyanh.y4n.pham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mbed-cli = "^1.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
